Bottom box's layout changes added, but not finished

--- a/index.html
+++ b/index.html
@@ -25,37 +25,46 @@
 
             <p class="comando-bloco">Primeiro, seu prato</p>
            <div class="container-opcoes">
-                
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
+
+                <button class="opcao" id= "prato1" onclick="selecionaPrato('prato1', 'certinhoP1');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoP1"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "prato2" onclick="selecionaPrato('prato2', 'certinhoP2');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoP2"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "prato3" onclick="selecionaPrato('prato3', 'certinhoP3');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoP3"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "prato4" onclick="selecionaPrato('prato4', 'certinhoP4');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoP4"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "prato5" onclick="selecionaPrato('prato5', 'certinhoP5');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoP5"></ion-icon>
+                </button>
 
             </div>
         </div>
@@ -66,36 +75,45 @@
 
             <div class="container-opcoes">
 
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
+                <button class="opcao" id= "bebida1" onclick="selecionaBebida('bebida1', 'certinhoB1');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoB1"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "bebida2" onclick="selecionaBebida('bebida2', 'certinhoB2');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoB2"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "bebida3" onclick="selecionaBebida('bebida3', 'certinhoB3');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoB3"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "bebida4" onclick="selecionaBebida('bebida4', 'certinhoB4');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoB4"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "bebida5" onclick="selecionaBebida('bebida5', 'certinhoB5');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoB5"></ion-icon>
+                </button>
             
             </div>
         </div>
@@ -105,50 +123,67 @@
             <p class="comando-bloco">Por fim, sua sobremesa</p>
             <div class="container-opcoes">
 
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p> 
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p> 
-                </div>
-                <div class="opcao">
-                    <img src="" class=""/>
-                    <p class="nome-opcao"></p>
-                    <p class="descricao"></p>
-                    <p class="preco"></p>
-                </div>
+                <button class="opcao" id= "sobremesa1" onclick="selecionaSobremesa('sobremesa1', 'certinhoS1');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoS1"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "sobremesa2" onclick="selecionaSobremesa('sobremesa2', 'certinhoS2');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoS2"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "sobremesa3" onclick="selecionaSobremesa('sobremesa3', 'certinhoS3');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoS3"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "sobremesa4" onclick="selecionaSobremesa('sobremesa4', 'certinhoS4');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoS4"></ion-icon>
+                </button>
+
+                <button class="opcao" id= "sobremesa5" onclick="selecionaSobremesa('sobremesa5', 'certinhoS5');" >
+                    <img src=""/>
+                    <p class="nome-opcao">Burgão gostoso</p>
+                    <p class="descricao">Gostoso d+, confia</p>
+                    <p class="preco">R$ 12,00</p>
+                    <ion-icon name="checkmark-circle" class="certinho" id="certinhoS5"></ion-icon>
+                </button>
+
             </div>    
 
         </div>
 
         <div class="bottom-box">
 
-            <div class="finalizar-pedido">
-                <button>Selecione os 3 itens
-                    para fechar o pedido</button>
-            </div>
+                <button class="botao-final" id='BF'>
+                    <p class = "nao-selecionado" id="NS">Selecione os 3 itens
+                        para fechar o pedido</p>
+                    <p  class = "selecionado" id="S">Finalizar pedido</p>
+                </button>
 
         </div>
 
+    <script src="javaScript/script.js"> mudarLayoutBotao(); </script>
+
     </div>
+
+<script src="javaScript/script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+
 
 </body>
 </html>
