Bottom-box's layout changes added

--- a/index.html
+++ b/index.html
@@ -169,15 +169,13 @@
 
         <div class="bottom-box">
 
-                <button class="botao-final" id='BF'>
+                <button class="botao-final" id='BF' onclick="bonus()">
                     <p class = "nao-selecionado" id="NS">Selecione os 3 itens
                         para fechar o pedido</p>
                     <p  class = "selecionado" id="S">Finalizar pedido</p>
                 </button>
 
         </div>
-
-    <script src="javaScript/script.js"> mudarLayoutBotao(); </script>
 
     </div>
 
