--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <p class="comando-bloco">Primeiro, seu prato</p>
            <div class="container-opcoes">
                 <button class="opcao" id= "prato1" onclick="selecionaPrato('prato1', 'certinhoP1');" >
-                    <img src="images/burgão gostoso.jpeg"/>
+                    <img src="images/burgao gostoso.jpeg"/>
                     <p class="nome-opcao">Burgão gostoso</p>
                     <p class="descricao">Gostoso d+, confia na call</p>
                     <p class="preco">R$ 12,00</p>
@@ -64,7 +64,7 @@
                     <ion-icon name="checkmark-circle" class="certinho" id="certinhoP3"></ion-icon>
                 </button>
                 <button class="opcao" id= "prato4" onclick="selecionaPrato('prato4', 'certinhoP4');" >
-                    <img src="images/burgão vegano.jpeg"/>
+                    <img src="images/burgao vegano.jpeg"/>
                     <p class="nome-opcao">Burgão vegano</p>
                     <p class="descricao">Pode não ser bom, mas é de folha</p>
                     <p class="preco">R$ 72,00</p>
@@ -90,7 +90,7 @@
                     <ion-icon name="checkmark-circle" class="certinho" id="certinhoB1"></ion-icon>
                 </button>
                 <button class="opcao" id= "bebida2" onclick="selecionaBebida('bebida2', 'certinhoB2');" >
-                    <img src="images/guaraná jesus.jpeg"/>
+                    <img src="images/guarana jesus.jpeg"/>
                     <p class="nome-opcao">Guaraná jesus</p>
                     <p class="descricao">O salvador da sua sede</p>
                     <p class="preco">R$ 5,00</p>
@@ -104,7 +104,7 @@
                     <ion-icon name="checkmark-circle" class="certinho" id="certinhoB3"></ion-icon>
                 </button>
                 <button class="opcao" id= "bebida4" onclick="selecionaBebida('bebida4', 'certinhoB4');" >
-                    <img src="images/coroninha com limão.jpeg"/>
+                    <img src="images/coroninha com limao.jpeg"/>
                     <p class="nome-opcao">Coroninha+limão</p>
                     <p class="descricao">Ambiente praiano não incluso</p>
                     <p class="preco">R$ 8,00</p>
